--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="Kelly's Pages-Web Design" content="Lake Havasu City's Web Design Company-Kelly's Pages">
-    <meta name="website design"
+    <meta name="Kelly's Pages-Lake Havasu City Web Design" content="Lake Havasu City's Web Design Company-Kelly's Pages">
+    <meta name="website design">
     <meta name="Lake Havasu web design">
     <meta name="Lake Havasu City website design">
     <meta name="Lake Havasu City web design">
