Added google plus icon and link to it

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                    <div class="facebook"><div style='float: left;'><a target="_blank" title="Find us on Facebook"
                                                  href=https://www.facebook.com/kellyspages/><img
                             src="facebook.png" alt="Follow on Facebook"
-                                                                                                 border=0></a></div><br><br><br><br><br><br>
+                                                                                                 border=0></a></div><br><br><br>
+                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div>
+                    <br><br><br><br><br><br>
             <p class="Email"><a target="_blank" href="mailto:info@kellyspages.com">Email:
                 info@kellyspages.com</a><br><br>
             <p class=address>P.O. Box 1493<br>
