--- a/Reviews.html
+++ b/Reviews.html
@@ -100,7 +100,8 @@
                     <br><br>
                     <div style='float: left;'><a target="_blank" title="Find us on Facebook"
                                                  href=https://www.facebook.com/kellyspages/><img
-                                                                                                 src="facebook.png" alt="Follow on Facebook"border=0></a></div>
+                                                                                                 src="facebook.png" alt="Follow on Facebook"border=0></a></div><br><br><br>
+                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div>
                 <div style="text-align:center">
                     <strong><a class="bottom link" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
                     </strong></div>
