--- a/Reviews.html
+++ b/Reviews.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-lg-12">
             <body style="background-color:#E4C0A0">
-            <div style='float: left;'> <div style='float: left;'><img src="smalllogo.png"></div></div>
+            <div style='float: left;'> <div style='float: left;'><img src="smalllogo.png"></a></div></div>
 <br>
             <div style='float: right;'><a id="phonenumber" class="glyphicon glyphicon-phone-alt" href="tel:+19284822247" itemprop="telephone">&thinsp;928.482.2247</a></div>
         </div>
@@ -84,8 +84,8 @@
             <p class=address>P.O. Box 1493<br>
                 Lake Havasu City, AZ 86405</p>
             <p class="phone">Phone: 928-482-2247 </p><br><br>
-            <br><br><br>
-            <br><br><br><br><br>
+            <br><br>
+            
               <div style='float:left;'><a href="https://twitter.com/kellyspages" class="twitter-follow-button"
                                               data-show-count="false" data-size="large">Follow @bykellyspages</a></div>
                     <script>!function (d, s, id) {
@@ -101,7 +101,7 @@
                     <div style='float: left;'><a target="_blank" title="Find us on Facebook"
                                                  href=https://www.facebook.com/kellyspages/><img
                                                                                                  src="facebook.png" alt="Follow on Facebook"border=0></a></div><br><br><br>
-                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div>
+                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div><br><br>
                 <div style="text-align:center">
                     <strong><a class="bottom link" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
                     </strong></div>
