--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,14 @@
                             fjs.parentNode.insertBefore(js, fjs);
                         }
                     }(document, 'script', 'twitter-wjs');</script>
-                    <br><br>
+                    <br><br><br>
                     <div style='float: left;'><a target="_blank" title="Find us on Facebook"
-                                                 href=https://www.facebook.com/kellyspages/><img
-                                                                                                 src="facebook.png" alt="Follow on Facebook"border=0></a></div>
+                                                 href=https://www.facebook.com/kellyspages/><img src="facebook.png" alt="Follow on Facebook"border=0></a></div> 
                 <br><br><br>
-                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div><br><br><br><br>
+                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div><br><br><br>
+                    <div class="tumblr"><div style='float: left;'><a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages" /><img src="tumblricon.png" alt="See Us on Tumblr" border=0></a></div>
+            
+            <br><br><br><br>
             <p id="Paypal"><div style="text-align:center">
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
