Changed <h3> to p class="call"
Changed element tag to size it right for Call 928-482-2247... content.
To get it to work on iPhones.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 </a>
             </div>
 <br><br><br><br>
-            <h3>Call 928-482-2247 for a free estimate!  Kelly's Pages offers website design services and consulting with SEO services locally here in
-            <a class="link" target="_blank" href="http://www.lhcaz.gov/">Lake Havasu City,</a> Arizona and in Mohave County.  Further, Kelly's Pages accepts web design work via remotely, communicating through Skype or other video conferencing methods.</h3><br><br>
+            <p class="call">Call 928-482-2247 for a free estimate!  Kelly's Pages offers website design services and consulting with SEO services locally here in
+            <a class="link" target="_blank" href="http://www.lhcaz.gov/">Lake Havasu City,</a> Arizona and in Mohave County.  Further, Kelly's Pages accepts web design work via remotely, communicating through Skype or other video conferencing methods.</p><br><br>
             
            
     <p class="offers" h3>Kelly's Pages Offers:</h3></p>
