--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
             <br><br><br>
             
-            <h2>Call 928-482-2247 for a consulting appointment today to bring your ideas live on the internet!</h2><br><br>
+            <p class="consult">Call 928-482-2247 for a consulting appointment today to bring your ideas live on the internet!</p><br><br>
                 <div class="twitter"><div style='float:left;'><a href="https://twitter.com/kellyspages" class="twitter-follow-button"
                                                 data-show-count="false" data-size="large">Follow @bykellyspages</a></div>
                     <script>!function (d, s, id) {
