--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="site.css" media="screen" />
-    <link rel="stylesheet" href="mobile.css" media="handheld" />
     <link href="carousel.css" rel="stylesheet">
-    <link rel="stylesheet" href="mobile.css" media="only screen and (max-device width:480px)"/>
-    <title>Kelly's Pages</title>
+ <title>Kelly's Pages</title>
 
 </head>
 
@@ -108,7 +106,8 @@
         </div>
             <br><br><br>
             
-            <p class="consult">Call 928-482-2247 for a consulting appointment today to bring your ideas live on the internet!</p><br><br>
+            <p class="consult">Call for a consulting appointment today to bring your ideas live on the internet!</p>
+    <p class="businessnumber">928-482-2247</p><br><br>
                 <div class="twitter"><div style='float:left;'><a href="https://twitter.com/kellyspages" class="twitter-follow-button"
                                                 data-show-count="false" data-size="large">Follow @bykellyspages</a></div>
                     <script>!function (d, s, id) {
