Added div businessnumber and <p style="font-size: 32px"

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <br><br><br>
             
             <p class="consult">Call for a consulting appointment today to bring your ideas live on the internet!</p>
-    <p class="businessnumber">928-482-2247</p><br><br>
+    <div id="businessnumber"><p style="font-size:32px">928-482-2247</p></div><br><br>
                 <div class="twitter"><div style='float:left;'><a href="https://twitter.com/kellyspages" class="twitter-follow-button"
                                                 data-show-count="false" data-size="large">Follow @bykellyspages</a></div>
                     <script>!function (d, s, id) {
