--- a/index.html
+++ b/index.html
@@ -31,18 +31,31 @@
 <body>
 
     <div><img src="smalllogo.png"></div>
-    <div><a href="tel:+19284822247">928.482.2247</a>
-  <div class="container">
-  <div id="header">
-    <nav class="navbar navbar-default">
-            <ul id="nav">
-                <li><a class="active" title="Kelly's Pages Home" href="index.html">Home</a></li>
-                <li><a title="Services" href="services.html">Services</a></li>
-                <li><a title="Reviews" href="reviews.html">Reviews</a></li>
-                <li><a title="Contact" href="contact.html">Contact</a></li>
-            </ul>
-              </nav>
+    <div>
+        <a href="tel:+19284822247">928.482.2247</a>
+    </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+
+    <div class="container">
         <div class="row">
             <div class="col-lg-offset-1 col-lg-10 col-md-12">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
