--- a/services.html
+++ b/services.html
@@ -1,120 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta name="Kelly's Pages-Lake Havasu City Web Design" content="Lake Havasu City's Web Design Company-Kelly's Pages">
+    <meta name="Mohave County website design">
+    <meta name="website design">
+    <meta name="Lake Havasu web design">
+    <meta name="Lake Havasu City website design">
+    <meta name="Lake Havasu City web design">
+    <meta name="Mohave County web design">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Kelly's Pages</title>
+    <title>Kelly's Pages Web Designs in Havasu</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="carousel.css" rel="stylesheet">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+
+    <title>Kelly's Pages</title>
+
+    <style type="text/css">
+        .header-phone {
+            margin-top: 29px;
+        }
+
+        .socialicon {
+            padding: 10px;
+        }
+
+        .img {
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+        }
+
+        .tab {
+            padding-top: 20px;
+            padding-bottom: 30px;
+        }
+
+        .phone {
+            padding-bottom: 30px;
+        }
+
+        .bottomlink {
+            color: black;
+        }
+
+        .contactinfo {
+            padding-top: 30px;
+        }
+
+        .bottomlink {
+            margin-top: 40px;
+            margin-bottom: 30px;
+        }
+
+        .paypal-buttons {
+          margin: 50px 0 50px 0;
+        }
+    </style>
 
 </head>
+
 <body>
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <body style="background-color:#E4C0A0">
-            <div style='float: left;'> <div style='float: left;'><img src="smalllogo.png"></div></div>
-            <br>
-            <div style='float: right;'><a id="phonenumber" class="glyphicon glyphicon-phone-alt" href="tel:+19284822247" itemprop="telephone">&thinsp;928.482.2247</a></div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div id="header">
-        <ul id="nav">
-            <li><a title="Kelly's Pages Home" href="index.html">Home</a></li>
-            <li><a title="Services" href="services.html">Services</a></li>
-            <li><a title="Reviews" href="Reviews.html">Reviews</a></li>
-            <li><a class="active" title="Contact" href="contact.html">Contact</a></li>
-        </ul>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="row">
-        <div class="col-lg-1 visible-lg"></div>
-        <div class="col-lg-10 col-md-12">
-
-            <p class="servicesprovided">Services Provided</p>
-            <br>
-            <div style="text-align:center">
-                <img src="servicesprovidedlist.png" alt="Services Provided List"/>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 hidden-xs">
+                <img src="smalllogo.png">
             </div>
-            <br><br><br><br>
-            <p class="offers"h3>Kelly's Pages Offers:</h3></p>
-       <div class="tab">
-           &nbsp;&nbsp;&nbsp; <h4><li>Free Estimate</h4></li>
-          &nbsp;&nbsp;&nbsp; <h4><li>Evaluation of Website</h4></li>
-         &nbsp;&nbsp;&nbsp; <h4><li>Increase SEO or Website Placement Online</h6></li>
-           &nbsp;&nbsp;&nbsp; <h4><li>Social Media Management</h4></li>
-           &nbsp;&nbsp;&nbsp;<h4><li>Consulting on Services such as Web Hosting and Website Management</h4></li>
+            <div class="col-sm-6">
+                <p class="text-right header-phone">
+                    <span class="glyphicon glyphicon-phone-alt"></span>
+                    <a href="tel:+19284822247">928.482.2247</a>
+                </p>
             </div>
-<br><br><br><br>
-            <p class="Email"><a target="_blank" href="mailto:info@kellyspages.com">Email:
-                info@kellyspages.com</a><br><br>
-            <p class=address>P.O. Box 1493<br>
-                Lake Havasu City, AZ 86405</p>
-            <p class="phone">Phone: 928-482-2247 </p><br><br>
-            <br><br><br>
-            
-              <div style='float:left;'><a href="https://twitter.com/kellyspages" class="twitter-follow-button"
-                                              data-show-count="false" data-size="large">Follow @bykellyspages</a></div>
-                    <script>!function (d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                        if (!d.getElementById(id)) {
-                            js = d.createElement(s);
-                            js.id = id;
-                            js.src = p + '://platform.twitter.com/widgets.js';
-                            fjs.parentNode.insertBefore(js, fjs);
-                        }
-                    }(document, 'script', 'twitter-wjs');</script>
-                    <br><br><br>
-                    <div style='float: left;'><a target="_blank" title="Find us on Facebook"
-                                                 href=https://www.facebook.com/kellyspages/><img
-                                                                                                 src="facebook.png" alt="Follow on Facebook"border=0></a></div><br><br><br>
-                    <div class="googlepluspage"><div style='float: left;'><a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages" /><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border=0></a></div><br><br><br>
-                    <div class="tumblr"><div style='float: left;'><a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages" /><img src="tumblricon.png" alt="See Us on Tumblr" border=0></a></div>
-                            <br><br><br><br>
-<p id="Paypal"><div style="text-align:center">
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="PLU6GQM648FSC">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-<br><br><br><br>
-           </div> </p><div style="text-align:center">
-                    <strong><a class="bottom link" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
-                    </strong></div>
-
-            <br><br>
         </div>
-        <br><br><br><br>
+
     </div>
-</div>
-<div class="col-lg-1 visible-lg"></div>
-</div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <span class="navbar-brand visible-xs-inline">Kelly's Pages</span>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-offset-1 col-lg-10 col-md-12">
+              <div class="text-center">
+            <h1 class="servicesprovide">Services Provided</h1>
+          </div>
+            <div class="text-center">
+                <img class="img" src="servicesprovidedlist.png" alt="Services Provided List"/>
+            </div>
+            <h4 class="text-left">Kelly's Pages Offers:</h4>
+            <div class="tab">
+                <li>Responsive Web Design</li>
+                <li>Evaluation of Current Website</li>
+                <li>Free Estimate</li>
+                <li>Increase SEO or Website Placement Online</li>
+                <li>Consulting on Services such as Web Hosting and Website Management</li>
+            </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            <h4 class="text-center">Call for a consulting appointment today to bring your ideas live on the internet!</h4>
+            <div class="phone">
+                <h4 class="text-center">Phone: 928-482-2247</h4></div>
+            <div class="socialicon">
+                <div>
+                    <a href="https://twitter.com/kellyspages" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bykellyspages</a>
+                </div>
+                <div class="socialicon">
+                    <a target="_blank" title="Find us on Facebook" href="https://www.facebook.com/kellyspages/"><img src="facebook.png" alt="Follow on Facebook" border="0"></a>
+                </div>
+                <div class="socialicon">
+                    <a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages"><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border="0"></a>
+                </div>
+                <div class="socialicon">
+                    <a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages"><img src="tumblricon.png" alt="See Us on Tumblr" border="0"></a>
+                </div>
+                <div class="contactinfo">
+                    <p class="text-center"><a target="_blank" href="mailto:info@kellyspages.com">Email: info@kellyspages.com</a></p>
+                    <p class="text-center">P.O. Box 1493<br>Lake Havasu City, AZ 86405</p>
+                    <p class="text-center">Phone: 928-482-2247 </p>
+                </div>
+                <div class="text-center paypal-buttons">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="GPZCH3UTXJQ6E">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
 
-  ga('create', 'UA-62230044-2', 'auto');
-  ga('send', 'pageview');
+                </div>
+                <div class="text-center">
+                    <a class="bottomlink" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
+                </div>
+            </div>
+        </div>
 
-</script>
-</body>
-</html>
+        <script>
+            ! function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0],
+                    p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + '://platform.twitter.com/widgets.js';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, 'script', 'twitter-wjs');
+        </script>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+            ga('create', 'UA-62230044-2', 'auto');
+            ga('send', 'pageview');
+        </script>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
+
+    </html>
