changed nav bar to bootstrap theme
Added bootstrap nav bar, added bottom margin to image

--- a/services.html
+++ b/services.html
@@ -35,10 +35,12 @@
             padding: 10px;
         }
 
-        .img {
-        padding-top: 50px;
-        padding-bottom: 50px;
-
+        .intro {
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+        .contain-img {
+          margin-bottom: 30px;
         }
 
         .tab {
@@ -64,7 +66,7 @@
         }
 
         .paypal-buttons {
-          margin: 50px 0 50px 0;
+            margin: 50px 0 50px 0;
         }
     </style>
 
@@ -107,94 +109,97 @@
             </div>
         </div>
     </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-lg-offset-1 col-lg-10 col-md-12">
-              <div class="text-center">
-            <h1 class="servicesprovide">Services Provided</h1>
-          </div>
-            <div class="text-center">
-                <img class="img" src="servicesprovidedlist.png" alt="Services Provided List"/>
-            </div>
-            <h4 class="text-left">Kelly's Pages Offers:</h4>
-            <div class="tab">
-                <li>Responsive Web Design</li>
-                <li>Evaluation of Current Website</li>
-                <li>Free Estimate</li>
-                <li>Increase SEO or Website Placement Online</li>
-                <li>Consulting on Services such as Web Hosting and Website Management</li>
-            </div>
-
-            <h4 class="text-center">Call for a consulting appointment today to bring your ideas live on the internet!</h4>
-            <div class="phone">
-                <h4 class="text-center">Phone: 928-482-2247</h4></div>
-            <div class="socialicon">
-                <div>
-                    <a href="https://twitter.com/kellyspages" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bykellyspages</a>
-                </div>
-                <div class="socialicon">
-                    <a target="_blank" title="Find us on Facebook" href="https://www.facebook.com/kellyspages/"><img src="facebook.png" alt="Follow on Facebook" border="0"></a>
-                </div>
-                <div class="socialicon">
-                    <a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages"><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border="0"></a>
-                </div>
-                <div class="socialicon">
-                    <a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages"><img src="tumblricon.png" alt="See Us on Tumblr" border="0"></a>
-                </div>
-                <div class="contactinfo">
-                    <p class="text-center"><a target="_blank" href="mailto:info@kellyspages.com">Email: info@kellyspages.com</a></p>
-                    <p class="text-center">P.O. Box 1493<br>Lake Havasu City, AZ 86405</p>
-                    <p class="text-center">Phone: 928-482-2247 </p>
-                </div>
-                <div class="text-center paypal-buttons">
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="GPZCH3UTXJQ6E">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-
+                <div class="text-center">
+                    <h1 class="servicesprovide">Services Provided</h1>
                 </div>
                 <div class="text-center">
-                    <a class="bottomlink" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
+                    <img class="contain-img" src="servicesprovidedlist.png" alt="Services Provided List" />
+                </div>
+                <h4 class="offers">Kelly's Pages Offers:</h4>
+                <div class="tab">
+                    <li>Responsive Web Design</li>
+                    <li>Evaluation of Current Website</li>
+                    <li>Free Estimate</li>
+                    <li>Increase SEO or Website Placement Online</li>
+                    <li>Consulting on Services such as Web Hosting and Website Management</li>
+                </div>
+
+                <h4 class="text-center">Call for a consulting appointment today to bring your ideas live on the internet!</h4>
+                <div class="phone">
+                    <h4 class="text-center">Phone: 928-482-2247</h4></div>
+                <div class="socialicon">
+                    <div>
+                        <a href="https://twitter.com/kellyspages" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bykellyspages</a>
+                    </div>
+                    <div class="socialicon">
+                        <a target="_blank" title="Find us on Facebook" href="https://www.facebook.com/kellyspages/"><img src="facebook.png" alt="Follow on Facebook" border="0"></a>
+                    </div>
+                    <div class="socialicon">
+                        <a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages"><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border="0"></a>
+                    </div>
+                    <div class="socialicon">
+                        <a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages"><img src="tumblricon.png" alt="See Us on Tumblr" border="0"></a>
+                    </div>
+                    <div class="contactinfo">
+                        <p class="text-center"><a target="_blank" href="mailto:info@kellyspages.com">Email: info@kellyspages.com</a></p>
+                        <p class="text-center">P.O. Box 1493<br>Lake Havasu City, AZ 86405</p>
+                        <p class="text-center">Phone: 928-482-2247 </p>
+                    </div>
+                    <div class="text-center paypal-buttons">
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="GPZCH3UTXJQ6E">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+
+                    </div>
+                    <div class="text-center">
+                        <a class="bottomlink" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
+                    </div>
                 </div>
             </div>
+
+            <script>
+                ! function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0],
+                        p = /^http:/.test(d.location) ? 'http' : 'https';
+                    if (!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = p + '://platform.twitter.com/widgets.js';
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, 'script', 'twitter-wjs');
+            </script>
+            <script>
+                (function(i, s, o, g, r, a, m) {
+                    i['GoogleAnalyticsObject'] = r;
+                    i[r] = i[r] || function() {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+                    a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                    a.async = 1;
+                    a.src = g;
+                    m.parentNode.insertBefore(a, m)
+                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+                ga('create', 'UA-62230044-2', 'auto');
+                ga('send', 'pageview');
+            </script>
+
+            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+            <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+            <!-- Include all compiled plugins (below), or include individual files as needed -->
+            <!-- Latest compiled and minified JavaScript -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         </div>
-
-        <script>
-            ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0],
-                    p = /^http:/.test(d.location) ? 'http' : 'https';
-                if (!d.getElementById(id)) {
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = p + '://platform.twitter.com/widgets.js';
-                    fjs.parentNode.insertBefore(js, fjs);
-                }
-            }(document, 'script', 'twitter-wjs');
-        </script>
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-62230044-2', 'auto');
-            ga('send', 'pageview');
-        </script>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      </div>
     </body>
 
-    </html>
+        </html>
