Fixed left margin to social media to align with images

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
             margin-top: 30px;
         }
 
+        .socialmedia {
+          margin-left: 185px;
+        }
+
         .intro {
             margin-top: 50px;
             margin-bottom: 50px;
@@ -137,8 +141,7 @@
         </div>
     </div>
 
-    <div class="socialicon ">
-        <div class="text-left ">
+    <div class="socialicon socialmedia">
             <div>
                 <a href="https://twitter.com/kellyspages " class="twitter-follow-button " data-show-count="false " data-size="large ">Follow @bykellyspages</a>
             </div>
