Fixed alignment of social media icons with images above
Added <div class="row"> and code from images <div class="row">.  Added
img-responsive to services centerimg.

--- a/services.html
+++ b/services.html
@@ -31,6 +31,10 @@
             margin-top: 29px;
         }
 
+        .img-responsive{
+          margin: 0 auto;
+        }
+
         .socialicon {
             padding: 10px;
         }
@@ -39,7 +43,7 @@
             margin-top: 50px;
             margin-bottom: 50px;
         }
-        .contain-img {
+        .centerimg {
           margin-bottom: 30px;
         }
 
@@ -116,8 +120,8 @@
                 <div class="text-center">
                     <h1 class="servicesprovide">Services Provided</h1>
                 </div>
-                <div class="text-center">
-                    <img class="contain-img" src="servicesprovidedlist.png" alt="Services Provided List" />
+                <div class="centerimg">
+                    <img class="img-responsive" src="servicesprovidedlist.png" alt="Services Provided List" />
                 </div>
                 <h4 class="offers">Kelly's Pages Offers:</h4>
                 <div class="tab">
