--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         }
 
         .socialmedia {
-          margin-left: 185px;
+          margin-left: 0 auto;
         }
 
         .intro {
@@ -140,25 +140,28 @@
             </div>
         </div>
     </div>
-
+    <div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-md-offset-2 col-md-8">
     <div class="socialicon socialmedia">
-            <div>
-                <a href="https://twitter.com/kellyspages " class="twitter-follow-button " data-show-count="false " data-size="large ">Follow @bykellyspages</a>
-            </div>
-            <div class="socialicon ">
-                <a target="_blank " title="Find us on Facebook " href="https://www.facebook.com/kellyspages/ "><img src="facebook.png " alt="Follow on Facebook " border="0 "></a>
-            </div>
-            <div class="socialicon ">
-                <a target="_blank " title="Visit Google Plus Page " href="https://plus.google.com/b/105464506091186986270/+Kellyspages "><img src="googleplusicon.png " alt="Visit Us on Google Plus Page " border="0 "></a>
-            </div>
-            <div class="socialicon ">
-                <a target="_blank " title="See Us on Tumblr " href="https://www.tumblr.com/blog/kellyspages "><img src="tumblricon.png " alt="See Us on Tumblr " border="0 "></a>
-            </div>
+
+            <a href="https://twitter.com/kellyspages" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bykellyspages</a>
         </div>
-        <div class="contactinfo ">
-            <p class="text-center "><a target="_blank " href="mailto:info@kellyspages.com ">Email: info@kellyspages.com</a></p>
-            <p class="text-center ">P.O. Box 1493<br>Lake Havasu City, AZ 86405</p>
-            <p class="text-center ">Phone: 928-482-2247 </p>
+        <div class="socialicon">
+            <a target="_blank" title="Find us on Facebook" href="https://www.facebook.com/kellyspages/"><img src="facebook.png" alt="Follow on Facebook" border="0"></a>
+        </div>
+        <div class="socialicon">
+            <a target="_blank" title="Visit Google Plus Page" href="https://plus.google.com/b/105464506091186986270/+Kellyspages"><img src="googleplusicon.png" alt="Visit Us on Google Plus Page" border="0"></a>
+        </div>
+        <div class="socialicon">
+            <a target="_blank" title="See Us on Tumblr" href="https://www.tumblr.com/blog/kellyspages"><img src="tumblricon.png" alt="See Us on Tumblr" border="0"></a>
+        </div>
+      </div>
+    </div>
+        <div class="contactinfo">
+            <p class="text-center"><a target="_blank" href="mailto:info@kellyspages.com">Email: info@kellyspages.com</a></p>
+            <p class="text-center">P.O. Box 1493<br>Lake Havasu City, AZ 86405</p>
+            <p class="text-center">Phone: 928-482-2247 </p>
         </div>
         <div class="text-center paypal-buttons">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -173,7 +176,6 @@
             <a class="bottomlink" target="_blank" href="http://www.kellyspages.com/">www.kellyspages.com</a>
         </div>
     </div>
-</div>
 
 <script>
     ! function(d, s, id) {
@@ -209,6 +211,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
