--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="Reviews.html">Reviews</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
